solved long show title text clip on mobile

--- a/css/sandbox/fullCalendar.css
+++ b/css/sandbox/fullCalendar.css
@@ -10,3 +10,9 @@
     padding: 0;
   }
 }
+
+@media (max-width: 700px) {
+  .fc-day-grid-event > .fc-content {
+    white-space: normal;
+  }
+}/* this prevents the fullCalendar default that clips long show title text on small screens */
